--- a/package.json
+++ b/package.json
@@ -1,131 +1,47 @@
 {
-  "name": "node-fetch",
-  "version": "3.3.2",
-  "description": "A light-weight module that brings Fetch API to node.js",
-  "main": "./src/index.js",
-  "sideEffects": false,
-  "type": "module",
-  "files": [
-    "src",
-    "@types/index.d.ts"
-  ],
-  "types": "./@types/index.d.ts",
-  "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
-  },
+  "name": "bom-backend",
+  "version": "1.0.0",
+  "description": "Backend per sistema BOM",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "mocha",
-    "coverage": "c8 report --reporter=text-lcov | coveralls",
-    "test-types": "tsd",
-    "lint": "xo"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/node-fetch/node-fetch.git"
-  },
-  "keywords": [
-    "fetch",
-    "http",
-    "promise",
-    "request",
-    "curl",
-    "wget",
-    "xhr",
-    "whatwg"
-  ],
-  "author": "David Frank",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/node-fetch/node-fetch/issues"
-  },
-  "homepage": "https://github.com/node-fetch/node-fetch",
-  "funding": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/node-fetch"
-  },
-  "devDependencies": {
-    "abort-controller": "^3.0.0",
-    "abortcontroller-polyfill": "^1.7.1",
-    "busboy": "^1.4.0",
-    "c8": "^7.7.2",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "chai-iterator": "^3.0.2",
-    "chai-string": "^1.5.0",
-    "coveralls": "^3.1.0",
-    "form-data": "^4.0.0",
-    "formdata-node": "^4.2.4",
-    "mocha": "^9.1.3",
-    "p-timeout": "^5.0.0",
-    "stream-consumers": "^1.0.1",
-    "tsd": "^0.14.0",
-    "xo": "^0.39.1"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "migrate": "tsx src/scripts/migrate.ts",
+    "migrate:up": "tsx src/scripts/migrate.ts up",
+    "migrate:down": "tsx src/scripts/migrate.ts down",
+    "migrate:status": "tsx src/scripts/migrate.ts status",
+    "db:setup": "npm run migrate:up",
+    "db:test": "tsx src/scripts/test-orm.ts"
   },
   "dependencies": {
-    "data-uri-to-buffer": "^4.0.0",
-    "fetch-blob": "^3.1.4",
-    "formdata-polyfill": "^4.0.10"
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "google-auth-library": "^9.14.1",
+    "googleapis": "^144.0.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
+    "typescript": "^5.3.3"
   },
-  "tsd": {
-    "cwd": "@types",
-    "compilerOptions": {
-      "esModuleInterop": true
-    }
-  },
-  "xo": {
-    "envs": [
-      "node",
-      "browser"
-    ],
-    "ignores": [
-      "example.js"
-    ],
-    "rules": {
-      "complexity": 0,
-      "import/extensions": 0,
-      "import/no-useless-path-segments": 0,
-      "import/no-anonymous-default-export": 0,
-      "import/no-named-as-default": 0,
-      "unicorn/import-index": 0,
-      "unicorn/no-array-reduce": 0,
-      "unicorn/prefer-node-protocol": 0,
-      "unicorn/numeric-separators-style": 0,
-      "unicorn/explicit-length-check": 0,
-      "capitalized-comments": 0,
-      "node/no-unsupported-features/es-syntax": 0,
-      "@typescript-eslint/member-ordering": 0
-    },
-    "overrides": [
-      {
-        "files": "test/**/*.js",
-        "envs": [
-          "node",
-          "mocha"
-        ],
-        "rules": {
-          "max-nested-callbacks": 0,
-          "no-unused-expressions": 0,
-          "no-warning-comments": 0,
-          "new-cap": 0,
-          "guard-for-in": 0,
-          "unicorn/no-array-for-each": 0,
-          "unicorn/prevent-abbreviations": 0,
-          "promise/prefer-await-to-then": 0,
-          "ava/no-import-test-files": 0
-        }
-      }
-    ]
-  },
-  "runkitExampleFilename": "example.js",
-  "release": {
-    "branches": [
-      "+([0-9]).x",
-      "main",
-      "next",
-      {
-        "name": "beta",
-        "prerelease": true
-      }
-    ]
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.5",
+    "@types/pg": "^8.10.9",
+    "@types/uuid": "^9.0.7",
+    "tsx": "^4.6.2"
   }
 }
