--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,11 @@
+{
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 10
+    },
+    "api/**/*.js": {
+      "maxDuration": 30
+    }
+  }
+}
 
