--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-  "functions": {
-    "api/*.js": {
-      "maxDuration": 10
-    },
-    "api/**/*.js": {
-      "maxDuration": 30
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     }
-  }
+  ]
 }
-
