--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 10
+    },
+    "api/**/*.js": {
+      "maxDuration": 30
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/api/$1"
     }
+  }
   ]
 }
