--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,23 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    }
+  ],
   "functions": {
-    "api/*.js": {
-      "maxDuration": 10
-    },
     "api/**/*.js": {
       "maxDuration": 30
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
     }
+  },
+  "env": {
+    "NODE_ENV": "production"
   }
-  ]
 }
